--- a/Print-PDF/test.ipynb
+++ b/Print-PDF/test.ipynb
@@ -15,25 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_path = Path.cwd() / 'input'\n",
-    "file_list = list(input_path.glob('*.pdf'))\n",
-    "file_path = file_list[0]"
+    "input_path = Path.cwd() / 'input'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from win32com.client import Dispatch"
+    "file_list = list(input_path.glob('*.pdf'))"
    ]
   },
   {
@@ -44,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "WindowsPath('c:/Users/syenl/Documents/Office-Utility/Print-PDF/input/test-p4.pdf')"
       ]
      },
      "execution_count": 4,
@@ -53,148 +44,18 @@
     }
    ],
    "source": [
-    "app = Dispatch('AcroExch.App')\n",
-    "app.Hide()"
+    "file_path = file_list[0]\n",
+    "file_path"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "avDoc = Dispatch('AcroExch.AVDoc')\n",
-    "avDoc.Open(file_path, file_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pdDoc = avDoc.GetPDDoc()\n",
-    "num_page = pdDoc.GetNumPages()\n",
-    "num_page"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "iPageOption = {\n",
-    "    'PDAllPages': -3,\n",
-    "    'PDOddPagesOnly': -4,\n",
-    "    'PDEvenPagesOnly': -5\n",
-    "}"
+    "from pypdf import PdfReader, PdfWriter"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "params = {\n",
-    "    'nFirstPage': 0,\n",
-    "    'nLastPage': num_page - 1,\n",
-    "    'nPSLevel': 3,\n",
-    "    'bBinaryOk': False,\n",
-    "    'bShrinkToFit': True,\n",
-    "    'bReverse': False,\n",
-    "    'bFarEastFontOpt': False,\n",
-    "    'bEmitHalftones': True,\n",
-    "    'iPageOption': iPageOption['PDEvenPagesOnly']\n",
-    "}\n",
-    "\n",
-    "avDoc.PrintPagesEx(**params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "avDoc.Close(True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import psutil"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "process_list = list(psutil.process_iter())\n",
-    "for process in process_list:\n",
-    "    if process.name() == 'Acrobat.exe':\n",
-    "        process.terminate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -202,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from win32print import GetDefaultPrinter, SetDefaultPrinter"
+    "reader = PdfReader(file_path)"
    ]
   },
   {
@@ -213,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "'EPSON L3150 Series'"
+       "4"
       ]
      },
      "execution_count": 7,
@@ -222,7 +83,7 @@
     }
    ],
    "source": [
-    "GetDefaultPrinter()"
+    "reader.get_num_pages()"
    ]
   },
   {
@@ -231,90 +92,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SetDefaultPrinter('EPSON L3150 Series')"
+    "writer = PdfWriter(reader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'/Type': '/Page',\n",
+       " '/Parent': NullObject,\n",
+       " '/Resources': {},\n",
+       " '/MediaBox': RectangleObject([0.0, 0.0, 612, 792])}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "writer.insert_blank_page()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import win32com.client\n",
-    "import win32print\n",
-    "\n",
-    "def set_default_printer(printer_name):\n",
-    "    \"\"\"Set the system default printer.\"\"\"\n",
-    "    win32print.SetDefaultPrinter(printer_name)\n",
-    "\n",
-    "def get_default_printer():\n",
-    "    \"\"\"Get the current default printer.\"\"\"\n",
-    "    return win32print.GetDefaultPrinter()\n",
-    "\n",
-    "def print_pdf(file_path, printer_name=None):\n",
-    "    # Get the current default printer\n",
-    "    original_printer = get_default_printer()\n",
-    "\n",
-    "    try:\n",
-    "        # If a printer is specified, set it as the default printer\n",
-    "        if printer_name:\n",
-    "            set_default_printer(printer_name)\n",
-    "\n",
-    "        # Create the Acrobat Application object\n",
-    "        acrobat_app = win32com.client.Dispatch(\"AcroExch.App\")\n",
-    "\n",
-    "        # Create the AVDoc object (used to handle the document)\n",
-    "        av_doc = win32com.client.Dispatch(\"AcroExch.AVDoc\")\n",
-    "\n",
-    "        # Open the document\n",
-    "        if av_doc.Open(file_path, \"\"):\n",
-    "            # Print the document silently\n",
-    "            av_doc.PrintPagesSilent(0, av_doc.GetNumPages() - 1, 1, False)\n",
-    "            \n",
-    "            # Close the document\n",
-    "            av_doc.Close(True)\n",
-    "            \n",
-    "            # Quit Acrobat application\n",
-    "            acrobat_app.CloseAllDocs()\n",
-    "            acrobat_app.Exit()\n",
-    "            print(\"PDF sent to printer successfully.\")\n",
-    "        else:\n",
-    "            print(\"Failed to open PDF file.\")\n",
-    "    \n",
-    "    finally:\n",
-    "        # Restore the original default printer\n",
-    "        set_default_printer(original_printer)\n",
-    "\n",
-    "# Specify the PDF file path\n",
-    "pdf_file = \"C:/path_to_your_pdf_file/example.pdf\"\n",
-    "\n",
-    "# Specify the desired printer name\n",
-    "printer_name = \"Your Printer Name\"\n",
-    "\n",
-    "# Call the function to print the PDF\n",
-    "print_pdf(pdf_file, printer_name)\n"
+    "output_path = input_path / 'output.pdf'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "with open(output_path, 'wb'):\n",
+    "    writer.write(output_path)"
+   ]
   },
   {
    "cell_type": "code",
