--- a/Print-PDF/test.ipynb
+++ b/Print-PDF/test.ipynb
@@ -70,20 +70,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "reader.get_num_pages()"
+    "num_page = reader.get_num_pages()"
    ]
   },
   {
@@ -104,9 +93,15 @@
      "data": {
       "text/plain": [
        "{'/Type': '/Page',\n",
-       " '/Parent': NullObject,\n",
        " '/Resources': {},\n",
-       " '/MediaBox': RectangleObject([0.0, 0.0, 612, 792])}"
+       " '/MediaBox': [0.0, 0.0, 595.4, 841.8],\n",
+       " '/Parent': {'/Type': '/Pages',\n",
+       "  '/Count': 5,\n",
+       "  '/Kids': [IndirectObject(3, 0, 1740960522000),\n",
+       "   IndirectObject(21, 0, 1740960522000),\n",
+       "   IndirectObject(23, 0, 1740960522000),\n",
+       "   IndirectObject(25, 0, 1740960522000),\n",
+       "   IndirectObject(50, 0, 1740960522000)]}}"
       ]
      },
      "execution_count": 9,
@@ -115,7 +110,7 @@
     }
    ],
    "source": [
-    "writer.insert_blank_page()"
+    "writer.add_blank_page()"
    ]
   },
   {
@@ -129,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
