--- a/Count-Word-Pages/test.ipynb
+++ b/Count-Word-Pages/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_list = list(input_path.iterdir())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -32,91 +41,29 @@
        " WindowsPath('c:/Users/syenl/Desktop/Office-Utility/Count-Word-Pages/input/test-p4.doc')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(input_path.glob('*'))"
+    "file_list = []\n",
+    "for path in path_list:\n",
+    "    for ext in ['.doc', '.docx']:\n",
+    "        if path.suffix == ext:\n",
+    "            file_list.append(path)\n",
+    "            break\n",
+    "file_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[WindowsPath('c:/Users/syenl/Desktop/Office-Utility/Count-Word-Pages/input/test-p1.docx'),\n",
-       " WindowsPath('c:/Users/syenl/Desktop/Office-Utility/Count-Word-Pages/input/test-p2.docx'),\n",
-       " WindowsPath('c:/Users/syenl/Desktop/Office-Utility/Count-Word-Pages/input/test-p3.docx'),\n",
-       " WindowsPath('c:/Users/syenl/Desktop/Office-Utility/Count-Word-Pages/input/test-p4.doc')]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(input_path.iterdir())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_path.is_dir()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_path.suffix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "suffix_list = ['.doc', '.docx']"
+   ]
   },
   {
    "cell_type": "code",
