--- a/Project-File/Extract-Files/test.ipynb
+++ b/Project-File/Extract-Files/test.ipynb
@@ -2,88 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from zipfile import ZipFile"
+    "from py7zr import unpack_7zarchive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path"
+    "import shutil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_path = Path.cwd() / 'input'"
+    "shutil.register_unpack_format('7zip', ['.7z'], unpack_7zarchive)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_path = Path.cwd() / 'output'"
+    "shutil.unpack_archive('input/folder_1.7z', 'output')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "file_list = list(input_path.glob('*.zip'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WindowsPath('c:/Users/syenl/Desktop/Office-Utility/Project-File/Extract-7z/input/folder_1.zip')"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "file_path = file_list[0]\n",
-    "file_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_path = output_path / file_path.stem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with ZipFile(file_path, mode='r') as file:\n",
-    "    file.extractall(target_path)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
