--- a/work/test.ipynb
+++ b/work/test.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from docx import Document\n",
-    "from pathlib import Path"
+    "from python_docx_replace import docx_replace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,17 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tables = doc.tables\n",
-    "table = tables[0]"
+    "table = doc.tables[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,20 +40,364 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "支出传票\n",
+      "PAYMENT VOUCHER\n",
+      " \n",
+      "/\n",
+      " \n",
+      "BAUCAR BAYARAN\n",
+      "支出传票\n",
+      "PAYMENT VOUCHER\n",
+      " \n",
+      "/\n",
+      " \n",
+      "BAUCAR BAYARAN\n",
+      "支出传票\n",
+      "PAYMENT VOUCHER\n",
+      " \n",
+      "/\n",
+      " \n",
+      "BAUCAR BAYARAN\n",
+      "支出传票\n",
+      "PAYMENT VOUCHER\n",
+      " \n",
+      "/\n",
+      " \n",
+      "BAUCAR BAYARAN\n",
+      "支出传票\n",
+      "PAYMENT VOUCHER\n",
+      " \n",
+      "/\n",
+      " \n",
+      "BAUCAR BAYARAN\n",
+      "日期\n",
+      "Date / Tarikh\n",
+      "${\n",
+      "Date\n",
+      "}\n",
+      "支出传票\n",
+      "PAYMENT VOUCHER\n",
+      " \n",
+      "/\n",
+      " \n",
+      "BAUCAR BAYARAN\n",
+      "支出传票\n",
+      "PAYMENT VOUCHER\n",
+      " \n",
+      "/\n",
+      " \n",
+      "BAUCAR BAYARAN\n",
+      "支出传票\n",
+      "PAYMENT VOUCHER\n",
+      " \n",
+      "/\n",
+      " \n",
+      "BAUCAR BAYARAN\n",
+      "支出传票\n",
+      "PAYMENT VOUCHER\n",
+      " \n",
+      "/\n",
+      " \n",
+      "BAUCAR BAYARAN\n",
+      "支出传票\n",
+      "PAYMENT VOUCHER\n",
+      " \n",
+      "/\n",
+      " \n",
+      "BAUCAR BAYARAN\n",
+      "传票号码\n",
+      "Voucher \n",
+      "No. \n",
+      "/ \n",
+      "No. \n",
+      "Baucar\n",
+      "[\n",
+      "Voucher\n",
+      "]\n",
+      "付\n",
+      "Pay / Bayar kepada\n",
+      "[Payee]\n",
+      "[Payee]\n",
+      "[Payee]\n",
+      "[Payee]\n",
+      "[Payee]\n",
+      "[Payee]\n",
+      "银数\n",
+      "Dollar / Ringgit\n",
+      "[Ringgit]\n",
+      "[Ringgit]\n",
+      "[Ringgit]\n",
+      "[Ringgit]\n",
+      "[Ringgit]\n",
+      "[Ringgit]\n",
+      "会计科目\n",
+      "ACCOUNT / AKAUN\n",
+      "会计科目\n",
+      "ACCOUNT / AKAUN\n",
+      "摘要\n",
+      "PARTICULARS / PERKARA\n",
+      "摘要\n",
+      "PARTICULARS / PERKARA\n",
+      "摘要\n",
+      "PARTICULARS / PERKARA\n",
+      "摘要\n",
+      "PARTICULARS / PERKARA\n",
+      "金额\n",
+      "AMOUNT / AMAUN\n",
+      "[\n",
+      "Account1\n",
+      "]\n",
+      "[\n",
+      "Account1\n",
+      "]\n",
+      "[Particular1]\n",
+      "[Particular1]\n",
+      "[Particular1]\n",
+      "[Particular1]\n",
+      "[Amount1]\n",
+      "[\n",
+      "Account2\n",
+      "]\n",
+      "[\n",
+      "Account2\n",
+      "]\n",
+      "[Particular\n",
+      "2\n",
+      "]\n",
+      "[Particular\n",
+      "2\n",
+      "]\n",
+      "[Particular\n",
+      "2\n",
+      "]\n",
+      "[Particular\n",
+      "2\n",
+      "]\n",
+      "[Amount\n",
+      "2\n",
+      "]\n",
+      "[\n",
+      "Account3\n",
+      "]\n",
+      "[\n",
+      "Account3\n",
+      "]\n",
+      "[Particular\n",
+      "3\n",
+      "]\n",
+      "[Particular\n",
+      "3\n",
+      "]\n",
+      "[Particular\n",
+      "3\n",
+      "]\n",
+      "[Particular\n",
+      "3\n",
+      "]\n",
+      "[Amount\n",
+      "3\n",
+      "]\n",
+      "[\n",
+      "Account4\n",
+      "]\n",
+      "[\n",
+      "Account4\n",
+      "]\n",
+      "[Particular\n",
+      "4\n",
+      "]\n",
+      "[Particular\n",
+      "4\n",
+      "]\n",
+      "[Particular\n",
+      "4\n",
+      "]\n",
+      "[Particular\n",
+      "4\n",
+      "]\n",
+      "[Amount\n",
+      "4\n",
+      "]\n",
+      "[\n",
+      "Account5\n",
+      "]\n",
+      "[\n",
+      "Account5\n",
+      "]\n",
+      "[Particular\n",
+      "5\n",
+      "]\n",
+      "[Particular\n",
+      "5\n",
+      "]\n",
+      "[Particular\n",
+      "5\n",
+      "]\n",
+      "[Particular\n",
+      "5\n",
+      "]\n",
+      "[Amount\n",
+      "5\n",
+      "]\n",
+      "[\n",
+      "Account6\n",
+      "]\n",
+      "[\n",
+      "Account6\n",
+      "]\n",
+      "[Particular\n",
+      "6\n",
+      "]\n",
+      "[Particular\n",
+      "6\n",
+      "]\n",
+      "[Particular\n",
+      "6\n",
+      "]\n",
+      "[Particular\n",
+      "6\n",
+      "]\n",
+      "[Amount\n",
+      "6\n",
+      "]\n",
+      "[\n",
+      "Account7\n",
+      "]\n",
+      "[\n",
+      "Account7\n",
+      "]\n",
+      "[Particular\n",
+      "7\n",
+      "]\n",
+      "[Particular\n",
+      "7\n",
+      "]\n",
+      "[Particular\n",
+      "7\n",
+      "]\n",
+      "[Particular\n",
+      "7\n",
+      "]\n",
+      "[Amount\n",
+      "7\n",
+      "]\n",
+      "[\n",
+      "Account8\n",
+      "]\n",
+      "[\n",
+      "Account8\n",
+      "]\n",
+      "[Particular\n",
+      "8\n",
+      "]\n",
+      "[Particular\n",
+      "8\n",
+      "]\n",
+      "[Particular\n",
+      "8\n",
+      "]\n",
+      "[Particular\n",
+      "8\n",
+      "]\n",
+      "[Amount\n",
+      "8\n",
+      "]\n",
+      "合计\n",
+      "TOTAL / JUMLAH\n",
+      "合计\n",
+      "TOTAL / JUMLAH\n",
+      "合计\n",
+      "TOTAL / JUMLAH\n",
+      "合计\n",
+      "TOTAL / JUMLAH\n",
+      "合计\n",
+      "TOTAL / JUMLAH\n",
+      "合计\n",
+      "TOTAL / JUMLAH\n",
+      "[Total]\n",
+      "付款方式\n",
+      "Payment Method\n",
+      " / Cara pembayaran\n",
+      " \n",
+      "付款方式\n",
+      "Payment Method\n",
+      " / Cara pembayaran\n",
+      " \n",
+      "付款方式\n",
+      "Payment Method\n",
+      " / Cara pembayaran\n",
+      " \n",
+      "[\n",
+      "Method\n",
+      "]\n",
+      "参考编号\n",
+      "Reference\n",
+      " No. / \n",
+      "No. Rujukan\n",
+      "参考编号\n",
+      "Reference\n",
+      " No. / \n",
+      "No. Rujukan\n",
+      "[\n",
+      "Reference\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "for row in rows:\n",
     "    cols = list(row.cells)\n",
     "    for col in cols:\n",
-    "        if col.text == '[Date]':\n",
-    "            col.text = col.text.replace('[Date]', '03/01/2025')"
+    "        paragraphs = col.paragraphs\n",
+    "        for paragraph in paragraphs:\n",
+    "            runs = paragraph.runs\n",
+    "            for run in runs:\n",
+    "                print(run.text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = 'template.docx'\n",
+    "doc = Document(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docx_replace(doc, Date='03/01/2025')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
